--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@
     --maybewhite: #f8f8f8;
     --cream: #ffefd4;
     --pink: #ffc5b0;
-    --clear-blue: #c1dbf1;
+    --clear-blue: #bbd0e2;
     --always-greener: #69a297;
     --bluegreen: #50808e;
     --dark-item: #343a3f;
